testing by using add-exports